# metabolomics_pipeline

./: .env.sirius.template  .gitattributes  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  check_sirius.sh  pyproject.toml
configs/: example_config.yml  sirius.yml
outputs/: classyfire_cache.json
scripts/: preview_merge.py
src/metabo_pipeline/: annotations.py  bioactivity.py  classify.py  classyfire_cache.json  cli.py  constants.py  dedup.py  io_msdial.py  isomers.py  logging.py  merge.py  qc.py  sirius_collect.py  sirius_export.py  sirius_utils.py  utils.py
src/metabo_pipeline/cli/: __init__.py  bioactivity_cmd.py  classify_cmd.py  final_cmd.py  merge_cmd.py  run_cmd.py  sirius_cmd.py  sirius_collect_cmd.py
