[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metabolomics-pipeline"
version = "0.1.0"
description = "MS-DIAL post-processing pipeline (cross-platform)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Shunyang" }]
dependencies = [
  "typer>=0.9",
  "rich>=13",
  "pyyaml>=6",
  "pandas>=2.1",
  "requests>=2.31",
]

[project.optional-dependencies]
data = ["numpy>=1.25", "scipy>=1.11"]
stats = ["scikit-learn>=1.3", "statsmodels>=0.14"]
report = ["jinja2>=3.1", "matplotlib>=3.8", "seaborn>=0.13", "plotly>=5.18"]

[project.scripts]
metabo = "metabo_pipeline.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["metabo_pipeline*"]
